@startuml

title "Exceptions"

class Exception {
}

class EmptyContinentParameterException{
}

class EmptyCountryParameterException{
}

class InvalidNumberOfPlayers{
}

class NonExistentContinent{
}

class NonExistentCountry{
}

class NonExistentPlayer{
}


Exception <|--right EmptyContinentParameterException
Exception <|--left EmptyCountryParameterException
Exception <|-- InvalidNumberOfPlayers
Exception <|-- NonExistentContinent
Exception <|-- NonExistentCountry
Exception <|-- NonExistentPlayer

@enduml